improve mobile styling

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,10 +8,10 @@
 
 :root {
   --white: #fff;
-  --black: #101820;
-  --yellow: #fee715;
+  --black: #282828;
+  --yellow: #f5b82e;
   --red: #e73131;
-  --green: #0cb877;
+  --green: #4fb477;
   --blue: #152cfe;
   --gray: #e2e2e2;
 
