enhance drag and drop experience

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -30,11 +30,12 @@ html {
   font-size: 15px;
   font-weight: 400;
   color: var(--black);
+  overflow: hidden;
 }
 
 body {
   margin: 0;
-  height: 100vh;
+  height: 100dvh;
 }
 
 #app {
